sonarqube: fix GlobalExceptionHandler